# NyxFrame

./: .gitignore  EXECUTION_PLAN.md  LICENSE  README.md  build_and_install_android.sh  build_android.sh  build_server.sh  fix_settings.py  generate_icons.py  package-lock.json  update_headers.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nyxframe/app/: MainActivity.kt
android/app/src/main/java/com/nyxframe/app/data/webrtc/: H264Decoder.kt  PipelineTracker.kt  WebRtcManager.kt
android/app/src/main/java/com/nyxframe/app/data/websocket/: WebSocketManager.kt
android/app/src/main/java/com/nyxframe/app/ui/screens/: ConnectScreen.kt  SettingsScreen.kt  StreamScreen.kt
android/app/src/main/java/com/nyxframe/app/ui/viewmodel/: AgentViewModel.kt
android/app/src/main/res/values/: colors.xml  strings.xml
docs/: ALL.md  CHANGELOG.md  Getting-Started.md  Home.md  Input-Emulation.md  Macros-and-Automation.md  System-Architecture.md  System-Robustness-and-Troubleshooting.md  Video-Streaming-Engine.md  robust_implementation_plan.md
docs/superpowers/: NYXFRAME_ENGINEERING_REPORT.md
docs/superpowers/specs/: 2026-06-08-repository-cross-platform-structure-design.md
server/: config.json.example
server/go/: go.mod  main.go
server/go/internal/: config.go  discovery.go  filetransfer.go  input.go  ipc.go  log.go  macros.go  session.go  stream.go  webrtc.go  websocket.go
server/rust/: Cargo.toml  README.md  test_appsink.py  test_appsink_dma.py  test_appsink_env.py  test_pw.py  test_pw_gcc.c  test_sw_gl.py
server/rust/src/: main.rs
server/rust/src/core/: config.rs  protocol.rs
server/rust/src/ipc/: uds.rs
