[package]
name = "nyxframe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# H.264 temporal encoder
openh264 = "0.4.4"

# Async runtime for systems networking and event handling
tokio = { version = "1.37", features = ["full"] }

# C standard library definitions for safe FFI bindings
libc = "0.2"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logger
log = "0.4"
env_logger = "0.11"

# Utilities
byteorder = "1.5"
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }

# ─── Linux-specific dependencies ───────────────────────────────────────────────

[target.'cfg(target_os = "linux")'.dependencies]
# Safe X11 bindings using XCB protocol layers with SHM + RandR features
xcb = { version = "1.2", features = ["shm", "randr"] }

# GStreamer for Wayland/PipeWire capture pipeline
gstreamer = { version = "0.22", optional = true }
gstreamer-app = { version = "0.22", optional = true }
gstreamer-video = { version = "0.22", optional = true }

[features]
default = ["wayland-capture"]
wayland-capture = ["gstreamer", "gstreamer-app", "gstreamer-video"]

