[package]
name = "nyxframe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# H.264 temporal encoder
openh264 = "0.4.4"

# Async runtime for systems networking and event handling
tokio = { version = "1.37", features = ["full"] }

# C standard library definitions for safe FFI bindings
libc = "0.2"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logger
log = "0.4"
env_logger = "0.11"

# Utilities
byteorder = "1.5"

# ─── Screen Capture ──────────────────────────────────────────────────────────
# scrap — X11 capture via XCB (used for native X11 sessions)
scrap = "0.5"

# ─── Linux-specific dependencies ─────────────────────────────────────────────

[target.'cfg(target_os = "linux")'.dependencies]
# Safe X11 bindings (for input emulation)
xcb = { version = "1.2", features = ["shm", "randr"] }

# XDG Desktop Portal for Wayland screencasting (PipeWire)
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }

# GStreamer for reading PipeWire screencast frames
gstreamer     = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
